# web_of_cams

./: .gitignore  README.md  pyproject.toml
experiments/: read_webcam_as_bytes.py  try_pyuvc.py
web_of_cams/: __main__.py  camera_frame_buffer.py  consumer.py  detect_cameras.py  process_handler.py  record_videos.py  run_camera.py
web_of_cams/frontend/: display_widget.py  main_window.py
