[build-system]
requires = ["flit_core>=3.4"]
build-backend = "flit_core.buildapi"

[project]
name = "web_of_cams"
version = "0.1.0"
description = "A project to handle multiple webcams in parallel."
authors = [
    { name = "Philip Queen", email = "queen.philip@gmail.com" }
]
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "opencv-contrib-python==4.8.*",
    "numpy",
]